# restaurant-nlp-review

./: Dockerfile  pyproject.toml  render.yaml
backend/: app.py  pyproject.toml  requirements.txt  utils.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx
