[tool.poetry]
name = "restaurant-nlp-review"
version = "0.1.0"
description = "A restaurant review NLP project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^2.3.3"
requests = "^2.31.0"
numpy = "^2.0.0"
spacy = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=72.1.0"]
build-backend = "poetry.core.masonry.api"
